add html and css

--- a/index.html
+++ b/index.html
@@ -4,19 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="main.css"></script>
-
     <link rel="stylesheet" href="css/main.css">
     <script
     src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
     <script defer src="js/main.js"></script>
-    <title>Document</title>
-    
+    <title>My Developer Skills</title>
     
 </head>
 <body>
-    <h1>HI</h1>
+    <h2>My Developer Skills</h2>
+    <div id="skills">
+    <div> <p> Cascading Style Sheets (CSS) </p></div> <br>
+    <div> <p> Hypertext Markup Language (HTML) </p></div>
+    </div>
+    <div id="form">
+        <input>
+        <button type="button" class="btn btn-outline-success">ADD SKILL</button>
+    </div>
+
 </body>
 </html>
