add clickable button

--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
     <title>My Developer Skills</title>
     
 </head>
+
 <body>
     <h2>My Developer Skills</h2>
     <div id="skills">
-    <div> <p> Cascading Style Sheets (CSS) </p></div> <br>
-    <div> <p> Hypertext Markup Language (HTML) </p></div>
-    </div>
+        <div class="btn btn-danger">X</div>
+        <p>My skill</p>
+    </div> 
+
     <div id="form">
         <input>
-        <button type="button" class="btn btn-outline-success">ADD SKILL</button>
+        <button id="add-skills" class="btn btn-danger">ADD SKILL</button>
     </div>
-
 </body>
 </html>
+
