--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="main.css"></script>
     <link rel="stylesheet" href="css/main.css">
     <script
     src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -13,19 +12,19 @@
     crossorigin="anonymous"></script>
     <script defer src="js/main.js"></script>
     <title>My Developer Skills</title>
-    
 </head>
 
 <body>
     <h2>My Developer Skills</h2>
-    <div id="skills">
-        <div class="btn btn-danger">X</div>
-        <p>My skill</p>
-    </div> 
+    <ul id="skills">
+        <li class="list-of-skills">
+        <li class="btn btn-danger">X</li>
+        <!-- <p> </p> -->
+    </ul>
 
     <div id="form">
-        <input>
-        <button id="add-skills" class="btn btn-danger">ADD SKILL</button>
+        <input id='skill-input'>
+        <button id="add-button" class="btn btn-danger">ADD SKILL</button>
     </div>
 </body>
 </html>
